--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
-  "rewrites": [
-    { "source": "/auth", "destination": "/api/auth" },
-    { "source": "/v1/login/user", "destination": "/api/v1/login/user" },
-    { "source": "/v1/signup/user", "destination": "/api/v1/signup/user" }
+  "version": 2,
+  "builds": [
+    { "src": "api/index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/v1/signup/user", "dest": "/api/index.js" },
+    { "src": "/v1/login/user", "dest": "/api/index.js" },
+    { "src": "/auth", "dest": "/api/index.js" }
   ]
 }
