--- a/vercel.json
+++ b/vercel.json
@@ -8,18 +8,7 @@
   ],
   "routes": [
     {
-      "src": "/v1/signup/user",
-      "methods": ["POST"],
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/v1/login/user",
-      "methods": ["POST"],
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/auth",
-      "methods": ["GET"],
+      "src": "/(.*)",
       "dest": "/api/index.js"
     }
   ]
