--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB = mongodb+srv://neoGStudent:abhisekSikdar@neog.wk1ft.mongodb.net/?retryWrites=true&w=majority&appName=neoG
+MONGODB=mongodb+srv://neoGStudent:abhisekSikdar@neog.wk1ft.mongodb.net/taskmanagement?retryWrites=true&w=majority&appName=neoG
